# NdkOpencvTest

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/tigrammer/ndkopencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: inner.cpp  inner.hpp  native-lib.cpp  process.cpp  process.hpp  test.cpp  test.hpp
app/src/main/java/com/example/tigrammer/ndkopencvtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/tigrammer/ndkopencvtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
